feat(common): Make poll timeout configurable
A poll timeout of 50 ms could introduce latency if the events occur
more frequently. This commit makes the timeout configurable to easy
test with different values to find optimal balance between timeout and
CPU usage.

--- a/src/data/sfsmaster.cfg.in
+++ b/src/data/sfsmaster.cfg.in
@@ -241,7 +241,7 @@
 ## (Default: 3600)
 # METADATA_DUMP_PERIOD_SECONDS = 3600
 
-## Interval for periodically cleaning of reserved files, in milliseconds. If set to 0, the reserved files 
+## Interval for periodically cleaning of reserved files, in milliseconds. If set to 0, the reserved files
 ## deletion is disabled.
 ## (Default: 0)
 # EMPTY_RESERVED_FILES_PERIOD_MSECONDS = 0
@@ -276,6 +276,12 @@
 ## landing always in the same chunkservers if the cluster is not well balanced.
 ## (Default: 1)
 # PRIORITIZE_DATA_PARTS = 1
+
+## Maximum amount of time in milliseconds that the polling operation will wait
+## for events. The value is applied for the polling in the events loop. Smaller
+## values could reduce latency at the cost of CPU usage.
+## (Default: 50)
+# POLL_TIMEOUT_MS = 50
 
 ## Minimum number of required redundant chunk parts that can be lost before
 ## chunk becomes endangered
