--- a/src/data/sfschunkserver.cfg.in
+++ b/src/data/sfschunkserver.cfg.in
@@ -119,6 +119,13 @@
 ## (Default: 1000)
 # BGJOBSCNT_PER_NETWORK_WORKER = 1000
 
+## Maximum amount of time in milliseconds that the polling operation will wait
+## for events. In the chunkservers, the same value is applied for the events
+## loop and for the network worker threads. Smaller values could reduce latency
+## at the cost of CPU usage.
+## (Default: 50)
+# POLL_TIMEOUT_MS = 50
+
 ## additional number of kilobytes which should be passed to
 ## posix_fadvise(POSIX_FADV_WILLNEED) before reading data from a chunk
 ## (Default: 0), i.e. use posix_fadvise only with the amount of data that is
