fix(uRaft): Recover from floatting IP drop (#195)
When the floating IP was lost by accident, the uRaft was not able to
detect it. This commit allows the HA to react in such a case.

Signed-off-by: Baldor <baldor@leil.io>

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 # Tab indentation for shell scripts, Dockerfiles and Makefiles
-[{*.{bash,sh},Dockerfile,Dockerfile.*,Makefile,*.mk}]
+[{*.{bash,sh},Dockerfile,Dockerfile.*,Makefile,*.mk,*.in}]
 indent_style = tab
 # Unsupported in some editors
 keep_padding = true
