--- a/src/uraft/saunafs-uraft-helper.in
+++ b/src/uraft/saunafs-uraft-helper.in
@@ -151,13 +151,47 @@ saunafs_metadata_version() {
 	esac
 }
 
-saunafs_isalive() {
-	saunafs_master isalive
-	if [[ $? == 0 ]] ; then
-		echo -n alive
-	else
-		echo -n dead
+have_master_role() {
+	local local_status="$(saunafs_admin metadataserver-status --porcelain "${matocl_host}" "${matocl_port}")"
+	[ "$(awk '{print $1}' <<< "${local_status}" 2>/dev/null)" == "master" ]
+}
+
+is_ip_present() {
+	local ip="${1}"
+	local iface="${2:-}"
+	local -a ip_command_extra_args=()
+	if [ -n "${iface}" ]; then
+		ip_command_extra_args+=("dev" "${iface}")
 	fi
+	ip addr show "${ip_command_extra_args[@]}" | grep -wq -m1 "${ip}"
+}
+
+is_floating_ip_present() {
+	if is_ip_present "${ipaddr}" "${iface}"; then
+		return 0
+	fi
+	if [ -n "${ipaddr2}" ] && is_ip_present "${ipaddr2}" "${iface2}"; then
+		return 0
+	fi
+	return 1
+}
+
+saunafs_isalive() {
+	# First, check if Saunafs master reports being alive
+	if ! saunafs_master isalive; then
+		echo -n 'dead'
+		return
+	fi
+
+	load_config
+
+	if ! is_floating_ip_present && have_master_role; then
+		echo -n 'non-floating'
+		return
+	fi
+
+	# If everything is okay, we are alive
+	echo -n 'alive'
 }
 
 saunafs_assign_ip() {
