--- a/src/data/saunafs-uraft.cfg
+++ b/src/data/saunafs-uraft.cfg
@@ -6,7 +6,7 @@
 #                                                              #
 ################################################################
 
-## uRaft default udp port used for comunication between nodes
+## uRaft default udp port used for communication between nodes
 ##
 # URAFT_PORT = 9427
 
