--- a/src/data/sfschunkserver.cfg.in
+++ b/src/data/sfschunkserver.cfg.in
@@ -134,7 +134,7 @@
 
 ## Try to fix out-of-order read requests; the value tells how much of
 ## skipped data to read if an offset of some read operation is greater than
-## the offset where the previos operation finished
+## the offset where the previous operation finished
 ## (Default: 0), i.e. don't read any skipped data; the value is aligned down to 64 KiB.
 # MAX_READ_BEHIND_KB = 0
 
