--- a/src/cgi/cgiserv.py.in
+++ b/src/cgi/cgiserv.py.in
@@ -17,7 +17,7 @@ import socket
 import select
 
 """Http server based on recipes 511453,511454 from code.activestate.com by Pierre Quentel"""
-"""Added support for indexes, access tests, proper handle of SystemExit exception, fixed couple of errors and vulnerbilities, getopt, lockfiles, daemonize etc. by Jakub Kruszona-Zawadzki"""
+"""Added support for indexes, access tests, proper handle of SystemExit exception, fixed couple of errors and vulnerabilities, getopt, lockfiles, daemonize etc. by Jakub Kruszona-Zawadzki"""
 
  ######################## ! DEPRECATION WARNING ! #########################
  #                                                                        #
