feat(master): Add option to toggle data parts priority
Originally, the master server was placing the data parts in the
chunkservers with higher available space factor. Then, the parity parts
were placed in the remaining chunkservers.

If the cluster is not balanced (some chunkservers have more space than
others), then almost all parities land in the same chunkservers. This
causes that reading is always issued to the chunkservers with data
parts, so the chunkservers with parity parts are barely used when
reading.

This commit introduces the configuration variable PRIORITIZE_DATA_PARTS
to control this behavior. The default value is 1 (active), which is the
same as it was before.

--- a/src/data/sfsmaster.cfg.in
+++ b/src/data/sfsmaster.cfg.in
@@ -271,6 +271,12 @@
 ## (Default: 0, Valid range: [0, 0.5])
 # LOAD_FACTOR_PENALTY = 0
 
+## When set, master server will prioritize data parts in EC goals to land in the
+## chunkservers with higher percentage of available space. Could cause parities
+## landing always in the same chunkservers if the cluster is not well balanced.
+## (Default: 1)
+# PRIORITIZE_DATA_PARTS = 1
+
 ## Minimum number of required redundant chunk parts that can be lost before
 ## chunk becomes endangered
 ## (Default: 0)
