feat(chunkserver): Make configurable masterconn workers
Previously the master connection had a fixed amount of 10 worker
threads in the jobs pool. This commit makes it configurable, to be
able to adapt it to the expected workload.

For instance, a chunkserver handling a small number of disks may have a
lower value.

--- a/src/data/sfschunkserver.cfg.in
+++ b/src/data/sfschunkserver.cfg.in
@@ -43,6 +43,11 @@
 ## (Default: 60)
 # MASTER_TIMEOUT = 60
 
+## Number of threads that the connection to master may use to process operations
+## on chunks, like create, duplicate, replicate and truncate.
+(Default: 10, Minimum: 2)
+# MASTER_NR_OF_WORKERS = 10
+
 ## IP address to listen on for client (sfsmount) connections:
 # CSSERV_LISTEN_HOST = *
 
